--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:paddingVertical="4dp"
     android:layout_height="wrap_content"
     android:paddingHorizontal="6dp">
 
@@ -41,12 +42,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="7dp"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="20dp"
         android:outlineAmbientShadowColor="@color/accent"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="12dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintTop_toBottomOf="@id/tv_date_today">
 
         <LinearLayout
@@ -67,6 +69,7 @@
                     android:layout_width="138dp"
                     android:layout_height="212dp"
                     android:layout_margin="8dp"
+                    app:cardCornerRadius="18dp"
                     android:layout_weight="1"
                     android:elevation="8dp"
                     android:outlineAmbientShadowColor="@color/accent"
@@ -126,6 +129,7 @@
                     android:layout_margin="8dp"
                     android:layout_weight="1"
                     android:elevation="8dp"
+                    app:cardCornerRadius="18dp"
                     android:outlineAmbientShadowColor="@color/accent"
                     android:outlineSpotShadowColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -190,6 +194,7 @@
                     android:layout_width="138dp"
                     android:layout_height="212dp"
                     android:layout_margin="8dp"
+                    app:cardCornerRadius="18dp"
                     android:layout_weight="1"
                     android:elevation="8dp"
                     android:outlineAmbientShadowColor="@color/accent"
@@ -249,7 +254,7 @@
                     android:layout_margin="8dp"
                     android:layout_weight="1"
                     android:elevation="8dp"
-
+                    app:cardCornerRadius="18dp"
                     android:outlineAmbientShadowColor="@color/accent"
                     android:outlineSpotShadowColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
