--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -4,9 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:paddingVertical="4dp"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="6dp">
+    android:paddingHorizontal="6dp"
+    android:paddingVertical="4dp">
 
     <TextView
         android:id="@+id/tv_today"
@@ -17,8 +17,8 @@
         android:textColor="@color/accent"
         android:textSize="28sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/tv_date_today"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="12dp"
-        android:text="Tuesday, 23 August 2022"
+        android:text="Friday, 09 September 2022"
         android:textColor="@color/accent"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -41,14 +41,14 @@
         android:id="@+id/card_data_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="7dp"
-        app:cardCornerRadius="20dp"
-        android:outlineAmbientShadowColor="@color/accent"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="4dp"
+        android:elevation="7dp"
+
+        android:outlineAmbientShadowColor="@color/accent"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_date_today">
 
         <LinearLayout
@@ -69,11 +69,11 @@
                     android:layout_width="138dp"
                     android:layout_height="212dp"
                     android:layout_margin="8dp"
-                    app:cardCornerRadius="18dp"
                     android:layout_weight="1"
                     android:elevation="8dp"
                     android:outlineAmbientShadowColor="@color/accent"
                     android:outlineSpotShadowColor="@color/accent"
+                    app:cardCornerRadius="18dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -129,9 +129,9 @@
                     android:layout_margin="8dp"
                     android:layout_weight="1"
                     android:elevation="8dp"
-                    app:cardCornerRadius="18dp"
                     android:outlineAmbientShadowColor="@color/accent"
                     android:outlineSpotShadowColor="@color/black"
+                    app:cardCornerRadius="18dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -194,11 +194,11 @@
                     android:layout_width="138dp"
                     android:layout_height="212dp"
                     android:layout_margin="8dp"
-                    app:cardCornerRadius="18dp"
                     android:layout_weight="1"
                     android:elevation="8dp"
                     android:outlineAmbientShadowColor="@color/accent"
                     android:outlineSpotShadowColor="@color/black"
+                    app:cardCornerRadius="18dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -211,14 +211,25 @@
                         android:orientation="vertical"
                         android:padding="8dp">
 
-                        <ImageView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/iv_turbidity"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_marginBottom="34dp"
-                            android:src="@drawable/icon_temp"
+                            app:cardCornerRadius="30dp"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent">
+
+                            <ImageView
+                                android:layout_width="48dp"
+                                android:layout_height="48dp"
+                                android:background="@color/white"
+                                android:src="@drawable/icon_turbidity"
+
+                                />
+                        </androidx.cardview.widget.CardView>
+
 
                         <TextView
                             android:id="@+id/tv_turbidity_data"
@@ -254,9 +265,9 @@
                     android:layout_margin="8dp"
                     android:layout_weight="1"
                     android:elevation="8dp"
-                    app:cardCornerRadius="18dp"
                     android:outlineAmbientShadowColor="@color/accent"
                     android:outlineSpotShadowColor="@color/black"
+                    app:cardCornerRadius="18dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -295,7 +306,7 @@
                             android:id="@+id/tv_dissolved_oxy"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Temperature"
+                            android:text="Dissolved Oxygen"
                             android:textColor="@color/white"
                             android:textSize="20sp"
                             android:textStyle="bold"
