--- a/app/src/main/res/layout/history_layout.xml
+++ b/app/src/main/res/layout/history_layout.xml
@@ -7,6 +7,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_history"
+        app:reverseLayout="true"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
